[package]
name = "ryzan"
version = "0.1.0"
edition = "2021"
description = "Ultra-secure Solana wallet CLI with hardware-level security and zero-trust architecture"
license = "MIT"

[[bin]]
name = "ryzan"
path = "src/main.rs"

[dependencies]
# Core security
chacha20poly1305 = "0.9"
argon2 = "0.4"
zeroize = "1.0"
getrandom = "0.2"

# TOTP and crypto utilities
totp-lite = "2.0"
bip39 = "2.0"
base64 = "0.21"
qrcode = "0.14"

# Solana
solana-sdk = "1.16"
solana-client = "1.16"

# CLI and serialization
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Terminal UI (matching the design reference)
crossterm = "0.27"
ratatui = "0.24"

# Utilities
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Security utilities
libc = "0.2"  # For mlock
rand = "0.8"
base32 = "0.4"
urlencoding = "2.1"
rpassword = "7.3"
